created kafka data pipeline

--- a/endpoints/skin_disease.ipynb
+++ b/endpoints/skin_disease.ipynb
@@ -9,47 +9,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "gather": {
           "logged": 1741376480162
         }
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2025-03-08 14:10:05.805082: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-            "2025-03-08 14:10:05.818672: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-            "2025-03-08 14:10:05.862714: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1741432205.913161   14297 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1741432205.935284   14297 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2025-03-08 14:10:05.984514: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# importing basis dependancies\n",
         "import tensorflow as tf\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "from tensorflow.keras import layers #typeignore\n",
+        "# import matplotlib.pyplot as plt\n",
+        "from tensorflow.keras import layers\n",
         "from tensorflow.keras.models import Sequential\n",
-        "import pandas as pd\n",
+        "# import pandas as pd\n",
         "import os"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
         "# path to image dataset\n",
-        "dataset_dir = \"/home/azureuser/cloudfiles/code/Skin Diseases Dataset\"  "
+        "dataset_dir = \"Tecla dataset\"  "
       ]
     },
     {
@@ -61,19 +46,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2025-03-07 20:10:47.709814: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:266] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-            "2025-03-07 20:11:35.116484: W tensorflow/core/lib/png/png_io.cc:89] PNG warning: iCCP: known incorrect sRGB profile\n",
-            "2025-03-07 20:12:15.365058: W tensorflow/core/lib/png/png_io.cc:89] PNG warning: eXIf: duplicate\n",
-            "2025-03-07 20:12:21.533171: W tensorflow/core/lib/png/png_io.cc:89] PNG warning: iCCP: known incorrect sRGB profile\n"
-          ]
-        },
         {
           "name": "stdout",
           "output_type": "stream",
