--- a/endpoints/skin_disease.ipynb
+++ b/endpoints/skin_disease.ipynb
@@ -29,12 +29,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# path to image dataset\n",
-        "dataset_dir = \"Tecla dataset\"  "
+        "dataset_dir = \"testing/Skin Diseases Dataset\"  "
       ]
     },
     {
